# RepositoryContextManager

./: CMakeLists.txt  README.md
.github/workflows/: CI.yml
include/: utils.hpp
src/: cli.cpp  cli.hpp  config_manager.cpp  renderer.cpp  renderer.hpp  utils.cpp
tests/: CMakeLists.txt  file_stats.cpp  filter_test.cpp  git_info_test.cpp  utils_test.cpp
